fix(select): fixed ion-select should pass through ion-text-wrap class to underlying .select-text element (#19949)

--- a/core/src/components/select/select.ios.scss
+++ b/core/src/components/select/select.ios.scss
@@ -11,6 +11,10 @@
   --padding-start: #{$select-ios-padding-start};
 }
 
+:host(.ion-text-wrap) .select-text {
+  white-space: normal;
+}
+
 .select-icon {
   width: 12px;
   height: 18px;
