--- a/core/src/components/select/select.md.scss
+++ b/core/src/components/select/select.md.scss
@@ -52,3 +52,7 @@
 
   opacity: 1;
 }
+
+:host(.ion-text-wrap) .select-text {
+  white-space: normal;
+}
